<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@drawable/rounded_corner_dialog">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:id="@+id/tvForgotPassword"
            android:text="@string/olvidaste_contrase_a"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btLogin"
            android:text="@string/iniciar"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            style="@style/modifiedButton"/>

        <TextView
            style="@style/parent"
            android:id="@+id/tvRegistro"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/no_tienes_cuenta_registrate"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>
</LinearLayout>
