<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@drawable/rounded_corner_dialog">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/registrarse"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNombre"
            style="@style/parent">
            <EditText
                android:id="@+id/editTextNombre"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/nombre"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputApellidos"
            style="@style/parent">
            <EditText
                android:id="@+id/editTextApellidos"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/apellidos"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCodigo"
            style="@style/parent">
            <EditText
                android:id="@+id/editTextCodigo"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="9"
                android:minEms="9"
                android:hint="@string/c_digo_de_alumno"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent">
            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/contrase_a"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLogin"
            android:text="@string/registrarse"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            style="@style/modifiedButton"/>

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/ya_tienes_cuenta_iniciar_sesi_n"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>
</LinearLayout>
